Dont force users to reload page when job is complete to view logs

--- a/sass/patterns/_alert-bar.scss
+++ b/sass/patterns/_alert-bar.scss
@@ -87,4 +87,6 @@ $alert-border-size: .05em;
 .event-log--error {
     color: $white;
     background-color: $error-color;
+
+    a { color: $white; }
 }
