--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -7,10 +7,11 @@
 {% block content %}
     <h1>Edit Application - <strong>{{ application.name }}</strong></h1>
 
-    <div class="form-wrapper">
-        {{ form_macros.formErrors(errors) }}
+    {{ form_macros.formErrors(errors) }}
 
-        <form method="post">
+    <form method="post">
+
+        <div class="form-wrapper">
             <ul class="form-fields">
                 <li>
                     <label for="name">Name</label>
@@ -18,37 +19,39 @@
                 </li>
                 <li>
                     <label for="identifier">Identifier</label>
-                    <small class="additional">This identifier is used to determine permissions. Modify with care.</small>
                     <input type="text" name="identifier" id="identifier" maxlength="24" required value="{{ form.identifier }}" class="text-input t50">
+                    <small class="additional">This identifier is used to determine permissions. Modify with care.</small>
                 </li>
+            </ul>
+        </div>
 
+        <ul class="form-fields">
+            <li>
+                <p>Group</p>
+                <ul class="radio-grid radio-grid--tri">
+                {% for group in groups %}
+                    {% set checked = '' %}
+                    {% if form.group == group.id %}
+                        {% set checked = ' checked="checked"' %}
+                    {% endif %}
+
+                    <li>
+                        <input type="radio" name="group" id="group-{{ group.id }}" value="{{ group.id }}"{{ checked }}>
+                        <label for="group-{{ group.id }}">{{ group.name }}</label>
+                    </li>
+                {% endfor %}
+                </ul>
+            </li>
+        </ul>
+
+        <div class="form-wrapper">
+            <ul class="form-fields">
                 <li>
-                    <p>Group</p>
-                    <ul class="radio-grid radio-grid--tri">
-                    {% for group in groups %}
-                        {% set checked = '' %}
-                        {% if form.group == group.id %}
-                            {% set checked = ' checked="checked"' %}
-                        {% endif %}
-
-                        <li>
-                            <input type="radio" name="group" id="group-{{ group.id }}" value="{{ group.id }}"{{ checked }}>
-                            <label for="group-{{ group.id }}">{{ group.name }}</label>
-                        </li>
-                    {% endfor %}
-                    </ul>
-                </li>
-
-                <li>
-                    <h5 class="label">GitHub Source</h5>
-                    {{ macros.gitsource(application) }}
-                    <small class="additional">Please contact a Hal administrator to change this setting.</small>
-                </li>
-
-                <li>
-                    <label for="notification_email">Notification Email Address</label>
-                    <input type="email" name="notification_email" id="notification_email" maxlength="128" value="{{ form.notification_email }}" class="text-input">
-                    <small class="additional">Optional. Notifications are sent on push or build completion.</small>
+                    <label for="github">GitHub Enterprise Repository</label>
+                    <input name="github" id="github" maxlength="200" required value="{{ form.github }}" class="text-input">
+                    <small class="additional">
+                        Enter the full URL or organization/repository such as <b>http://git/team-a/project-b</b> or <b>team-a/project-b</b>.
+                    </small>
                 </li>
             </ul>
 
@@ -56,7 +59,7 @@
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
                 <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('application', {application: application.id}) }}">Cancel</a></li>
             </ul>
+        </div>
 
-        </form>
-    </div>
+    </form>
 {% endblock %}
