Improve column sizes on event table

--- a/templates/_partial/log-table.twig
+++ b/templates/_partial/log-table.twig
@@ -4,10 +4,10 @@
 <table class="js-event-logs table--spacing-medium table--bodied" data-tablesaw-mode="stack">
     <thead>
         <tr>
-            <th class="t20">Event</th>
+            <th>Event</th>
             <th>Time</th>
             <th>Message</th>
-            <th class="t15"></th>
+            <th></th>
         </tr>
     </thead>
 
