--- a/sass/app/_js.scss
+++ b/sass/app/_js.scss
@@ -78,3 +78,19 @@
 .js-pool-views {
     display: none;
 }
+
+
+.js-event-logs {
+    @include breakpoint($bp-medium) {
+        th:nth-child(1) { width: 15%; }
+        th:nth-child(2) { width: 15%; }
+        th:nth-child(4) { width: 15%; }
+    }
+
+    @include breakpoint($bp-large) {
+        th:nth-child(1) { width: 10%; }
+        th:nth-child(2) { width: 15%; }
+        th:nth-child(4) { width: 10%; }
+    }
+}
+
