--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -9,11 +9,6 @@
     <h2 class="leader">Manage Deployments</h2>
     <ul class="button-list">
         <li>
-            <a href="{{ urlFor('applications') }}" class="btn">
-                {{ macros.icon('list') }} Applications
-            </a>
-        </li>
-        <li>
             <a href="{{ urlFor('servers') }}" class="btn">
                 {{ macros.icon('server') }} Servers
             </a>
@@ -30,13 +25,8 @@
         </li>
     </ul>
 
-    <h2 class="leader">Security and Permissions</h2>
+    <h2 class="leader">User Management</h2>
     <ul class="button-list">
-        <li>
-            <a href="{{ urlFor('admin.system.status') }}" class="btn btn--primary">
-                {{ macros.icon('terminal') }} System Status
-            </a>
-        </li>
         <li>
             <a href="{{ urlFor('users') }}" class="btn btn--primary">
                 {{ macros.icon('users') }} Users
@@ -47,6 +37,16 @@
                 {{ macros.icon('safe') }} Permissions
             </a>
         </li>
+    </ul>
+
+    <h2 class="leader">Security</h2>
+    <ul class="button-list">
+        <li>
+            <a href="{{ urlFor('admin.system.status') }}" class="btn btn--primary">
+                {{ macros.icon('terminal') }} System Status
+            </a>
+        </li>
+
         <li>
             <a href="{{ urlFor('admin.credentials') }}" class="btn btn--primary">
                 {{ macros.icon('locked') }} Credentials
