--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -131,7 +131,6 @@
         <li><a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a></li>
         <li><a href="https://aws.amazon.com/codedeploy/">AWS CodeDeploy</a></li>
         <li><a href="https://aws.amazon.com/s3/">AWS S3</a> (Static file deployments)</li>
-        <li><a href="https://aws.amazon.com/autoscaling/">AWS EC2</a> (EC2 Autoscaling Pools)</li>
         <li>R Sync (On-premise unix servers)</li>
     </ul>
     <p>See <a href="{{ urlFor('help.setup') }}">the application setup page</a> for how to set up your application for on premise or AWS.</p>
@@ -144,7 +143,7 @@
     <p>Read more in the <a href="{{ urlFor('help.deployment') }}">deployment scripting guide for engineers</a>.</p>
 
     <h3 id="dotnet-support">{{ macros.status_icon('Does Hal support .NET applications?') }}</h3>
-    <p>Hal supports building windows projects and deploying to AWS-based deployment targets such as Elastic Beanstalk, CodeDeploy, and EC2.</p>
+    <p>Hal supports building windows projects and deploying to AWS-based deployment targets such as Elastic Beanstalk and CodeDeploy.</p>
     <p>However, this feature will not be enabled.</p>
 
     <h3 id="aws-support">{{ macros.status_icon('Does Hal support AWS?') }}</h3>
@@ -153,7 +152,6 @@
         <li><a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a></li>
         <li><a href="https://aws.amazon.com/codedeploy/">AWS CodeDeploy</a></li>
         <li><a href="https://aws.amazon.com/s3/">AWS S3</a> (Static file deployments)</li>
-        <li><a href="https://aws.amazon.com/autoscaling/">AWS EC2</a> (EC2 Autoscaling Pools)</li>
         <li>R Sync (On-premise unix servers)</li>
     </ul>
 
