Fix wrong filename for appspec file in help docs

--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -227,7 +227,7 @@
         </li>
 
         <li>
-            <strong>Configure deployments with .appspec.yml</strong>
+            <strong>Configure deployments with appspec.yml</strong>
             <p class="mtm mbn">
                 You must configure your deployment procedure with an appspec file.
                 This informs the agents where to put your code.
