--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -19,8 +19,8 @@
                 </a>
 
                 <h1 class="hal-label">
-                    <span class="hal-label__name">HAL</span>
-                    <span class="hal-label__version">9000 {% if isUpdateTickOn() %}
+                    <span class="hal-label__name">Hal</span>
+                    <span class="hal-label__version">2.9.0 {% if isUpdateTickOn() %}
                         <a class="hal-stamp" href="{{ urlFor('latest.release') }}" title="Hal was recently updated!">{{ macros.icon('star') }}</a>
                     {% endif %}</span>
                 </h1>
