--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -39,8 +39,8 @@
                     </a>
 
                     <h1 class="hal-label">
-                        <span class="hal-label__name">HAL</span>
-                        <span class="hal-label__version">9000</span>
+                        <span class="hal-label__name">Hal</span>
+                        <span class="hal-label__version">2.9.0</span>
                     </h1>
                 </div>
             </div>
