Add changelog and initial 2.9 release notes

--- a/templates/_partial/help.release-notes.twig
+++ b/templates/_partial/help.release-notes.twig
@@ -59,7 +59,7 @@
         </li>
         <li>
             <b><a href="/docs/release-notes-2.9.0.html">2.9</a></b>
-            <small>(Bugfixes)</small>
+            <small>(Bugfixes, Script Deployment Type)</small>
         </li>
     </ul>
 {% endblock %}
